# testing_soft_FIUBa

./: CMakeLists.txt  README.md
app/dht11/: CMakeLists.txt  project.yml
app/dht11/inc/: dht11.h
app/dht11/src/: dht11.c  manage_read_dht11.h
app/dht11/test/: config_test_dht11.h  gpio.h  sio.h  test_dht11_soft.c
main/: CMakeLists.txt  main.c
